# Weather_Forecast_App

./: Main.py  README.md  Shira_Shanny_BIU_DS217_Python_Project_1_Weather_Forecast.ipynb  app.py  pyproject.toml  requirements.txt
