[tool.poetry]
name = "weather-forecast-app"
version = "0.1.0"
description = ""
authors = ["ShiraShanny <shira305@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
timezonefinder = "^6.5.0"
pytz = "^2024.1"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
